cmake_minimum_required(VERSION 3.16)
project(My_RGBD)

# 增加PCL库的依赖
FIND_PACKAGE( PCL REQUIRED COMPONENTS common io )


# 增加opencv的依赖
FIND_PACKAGE( OpenCV REQUIRED )
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )


ADD_EXECUTABLE( StichCloud src/stich_cloud.cpp )
TARGET_LINK_LIBRARIES( StichCloud
    ${OpenCV_LIBS} 
    ${PCL_LIBRARIES} )
